Settings: Forward Port Volume Long Press Skip Tracks [2/2]
Bring Forward Volume Rocker Track Change

* Thanks Sahul Krishan for the great animation
* @ritujb: Fix default value mismatch with framework in playback control

Change-Id: Ifa3d0987a0d54afd1f56e1d4a7488f428338c757
Signed-off-by: Mesquita <mesquita@aospa.co>

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -109,4 +109,8 @@
     <string name="adaptive_playback_timeout_5_min_summary">On (5 minutes)</string>
     <string name="adaptive_playback_timeout_10_min">10 minutes</string>
     <string name="adaptive_playback_timeout_10_min_summary">On (10 minutes)</string>
+
+    <!-- Volume button music control -->
+    <string name="volume_button_music_control_title">Playback control</string>
+    <string name="volume_button_music_control_summary">When the screen is off, long-pressing volume keys will skip music tracks</string>
 </resources>
