Settings: Smart Charging (2/4)
Change-Id: Ie82d435125c379c6158908d6e8beb8063f4acd88

Smart Charging: allow user set resume level [2/2]

Change-Id: If730fa6b767fe0736b4e169194921659257ffc7b

Smart Charging: add reset battery stats option [2/2]

 * Also add footer explanation

Change-Id: I9611b949eb0e0d837ad78d8b1276a881bcf9c910

Smart Charging: Make it optional

* Allows a device maintainer to show/hide the Smart Charging pref in Power Settings
* Disabled by default

Change-Id: I0dcbdab57e5cef2e599054f570137078a751d4ac

Smart Charging: Lower the minimum value of charging start

Signed-off-by: spezi77 <spezi7713@gmx.net>
Change-Id: I4e102b83e34dd6d99b56335b5f2a9b173e44af0b

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -513,4 +513,14 @@
     <!-- Android debugging as root -->
     <string name="adb_enable_root">Rooted debugging</string>
     <string name="adb_enable_summary_root">Allow running Android debugging as root</string>
+
+    <!-- Smart charging -->
+    <string name="smart_charging_title">Smart charging</string>
+    <string name="smart_charging_summary">Set maximum charging level</string>
+    <string name="smart_charging_switch_title">Use smart charging</string>
+    <string name="smart_charging_level_title">Stop trigger level</string>
+    <string name="smart_charging_resume_level_title">Start trigger level</string>
+    <string name="smart_charging_reset_stats_title">Reset battery statistics</string>
+    <string name="smart_charging_reset_stats_summary">Reset battery statistics after reaching user defined charging level</string>
+    <string name="smart_charging_footer">Smart Charging allows you to set maximum charging level to extend the lifespan of your battery</string>
 </resources>
