--- a/res/values/evolution_config.xml
+++ b/res/values/evolution_config.xml
@@ -30,4 +30,7 @@
 
     <!-- Max network scan search time in seconds -->
     <integer name="config_network_scan_helper_max_search_time_sec">300</integer>
+
+    <!-- Smart Charging -->
+    <bool name="config_supportSmartCharging">false</bool>
 </resources>
