Add toggle to enable ADB root
Author: dianlujitao <dianlujitao@lineageos.org>
Date:   Sun Nov 24 14:33:05 2019 +0800

    Settings: Mark adb root toggle as non-persistent

     * It's always read from the binder API

    Change-Id: I88234450a2dcfbea985eb3c48114d869db331cd0

Author: dianlujitao <dianlujitao@lineageos.org>
Date:   Sun Nov 24 14:34:51 2019 +0800

    Settings: Remove ADBROOT permission from manifest

    Change-Id: I2a458cda22b3d370734adb89ff8e0303ca1c8374

Author: Luca Stefani <luca.stefani.ge1@gmail.com>
Date:   Fri Mar 13 23:05:25 2020 +0100

    Hide ADB Root preference on user builds

    Change-Id: I8c9251ddda0eb15e1134d4fafbf3d972f5fa8809

Change-Id: I0d9d69bc05034b4308450baca531305221665966

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -509,4 +509,8 @@
     <string name="wallpaper_zoom_effect_title">Wallpaper zoom effect</string>
     <!-- Display Settings: Subtitle of the setting which toggles wallpaper zooming effects on interraction -->
     <string name="wallpaper_zoom_effect_summary">Zoom the wallpaper in order to show zoom-out depth animation. Wallpapers may suffer quality decrease</string>
+
+    <!-- Android debugging as root -->
+    <string name="adb_enable_root">Rooted debugging</string>
+    <string name="adb_enable_summary_root">Allow running Android debugging as root</string>
 </resources>
