Settings: Move Notch Cutout to Display
Change-Id: I22ccb620395df29ebce33b0c5944a5fa43728771
Signed-off-by: Dmitrii <bankersenator@gmail.com>
Signed-off-by: minaripenguin <alexfinhart@gmail.com>

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -236,6 +236,11 @@
             settings:controller="com.android.settings.touch.HighTouchSensitivitySettingsPreferenceController" />
 
         <ListPreference
+            android:key="display_cutout_emulation"
+            android:title="@string/display_cutout_emulation"
+            settings:keywords="@string/display_cutout_emulation_keywords" />
+
+        <ListPreference
             android:key="theme"
             android:summary="@string/summary_placeholder"
             android:title="@string/device_theme" />
