Settings: Add support to open device maintainer's telegram
* Do this by overlaying on top of <string name="build_maintainer_telegram"> in evolution_strings.xml

Change-Id: I3bcd5292e1a03028262fbfa38bc2b7a8bb8a3967
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -17,6 +17,7 @@
     <!-- About device screen, build maintainer -->
     <string name="build_maintainer">Build maintainer</string>
     <string name="build_maintainer_summary" translatable="false">Unknown</string>
+    <string name="build_maintainer_telegram" translatable="false">https://t.me/EvolutionX</string>
 
     <!-- The Evolver -->
     <string name="evolver_dashboard_title">The Evolver</string>
