--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -273,7 +273,7 @@
         android:order="-25"/>
 
     <!-- Dock speaker plays -->
-    <DropDownPreference
+    <ListPreference
         android:key="dock_audio_media"
         android:title="@string/dock_audio_media_title"
         android:summary="%s"
@@ -286,7 +286,7 @@
         android:order="-15"/>
 
     <!-- Emergency tone -->
-    <DropDownPreference
+    <ListPreference
         android:key="emergency_tone"
         android:title="@string/emergency_tone_title"
         android:summary="%s"
