--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -239,6 +239,14 @@
             android:key="vr_display_pref"
             android:title="@string/display_vr_pref_title" />
 
+        <!-- Screen OFF FOD -->
+        <com.evolution.settings.preference.SecureSettingSwitchPreference
+            android:key="screen_off_udfps_enabled"
+            android:title="@string/screen_off_fod_title"
+            android:summary="@string/screen_off_fod_summary"
+            android:defaultValue="true"
+            settings:controller="com.android.settings.security.UdfpsGesturePreferenceController" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
