Settings: Add setting for timeout-reboot
* Reboots the device automatically if not used for a certain
  period of time
* Based on Bluetooth and Wifi TimeoutPreferenceControllers
* [Stallix] Use custom timeout entries/values

Change-Id: I39c90c1b1f7562ffb85c2c45ce6c50f400f16074
[nurkeinneid] adapt to current settings providers
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>
Co-authored-by: Oliver Scott <olivercscott@gmail.com>

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -508,4 +508,9 @@
     <string name="wallpaper_zoom_effect_title">Wallpaper zoom effect</string>
     <!-- Display Settings: Subtitle of the setting which toggles wallpaper zooming effects on interraction -->
     <string name="wallpaper_zoom_effect_summary">Zoom the wallpaper in order to show zoom-out depth animation. Wallpapers may suffer quality decrease</string>
+
+    <!-- Device auto reboot -->
+    <string name="device_reboot_timeout_title">Auto reboot</string>
+    <string name="device_reboot_timeout_summary">The device will automatically reboot if it hasn\'t been unlocked within the last <xliff:g id="timeout_description">%1$s</xliff:g></string>
+    <string name="device_reboot_timeout_summary2">The device will not automatically reboot</string>
 </resources>
