--- a/res/xml/accessibility_system_controls.xml
+++ b/res/xml/accessibility_system_controls.xml
@@ -14,13 +14,11 @@
         settings:controller="com.android.settings.gestures.SystemNavigationPreferenceController"
         settings:searchable="false" />
 
-    <Preference
+    <com.android.settings.widget.PrimarySwitchPreference
         android:fragment="com.android.settings.gestures.OneHandedSettings"
-        android:key="gesture_system_navigation_one_handed_accessibility"
-        android:persistent="false"
+        android:key="gesture_one_handed"
         android:title="@string/one_handed_title"
-        settings:controller="com.android.settings.gestures.OneHandedEnablePreferenceController"
-        settings:searchable="false" />
+        settings:controller="com.android.settings.gestures.OneHandedEnablePreferenceController" />
 
     <SwitchPreference
         android:key="toggle_power_button_ends_call_preference"
