--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -92,7 +92,7 @@
     <string name="fingerprint_enroll_touch_dialog_message_side">Touch the sensor on the side of your phone.</string>
 
     <!-- Adaptive Playback -->
-    <string name="adaptive_playback_screen_title">Adaptive playback</string>
+    <string name="adaptive_playback_screen_title">Adaptive Playback</string>
     <string name="adaptive_playback_enabled">Use adaptive playback</string>
     <string name="adaptive_playback_disabled_summary">Off</string>
     <string name="adaptive_playback_intro_text">Automatically pauses media when the volume is muted and will resume automatically when volume is restored within the set time.</string>
