SoftAp: add support for setting shutdown timeout
Change-Id: I80aebe3ca8e13e3dc5c503d5a8527282e96e486a
Signed-off-by: cjybyjk <cjybyjk@zjnu.edu.cn>

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -182,4 +182,5 @@
     <string name="wifi_band_24ghz_and_5ghz" translatable="false">2.4 GHz &amp; 5 GHz</string>
     <string name="wifi_band_24ghz_and_6ghz" translatable="false">2.4 GHz &amp; 6 GHz</string>
     <string name="wifi_band_60ghz" translatable="false">60 GHz</string>
+    <string name="wifi_hotspot_auto_off_timeout_never">Never turn off hotsopt</string>
 </resources>
