Settings: Update package details to match S style
 * After: http://i.imgur.com/jcvNT2R.png

Change-Id: I855e8d8a1618283bd99899580e9077bc362647dc

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -167,4 +167,10 @@
     <!-- Pocket judge -->
     <string name="pocket_judge_title">Pocket detection</string>
     <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
+
+    <!-- Package details -->
+    <string name="package_details_group_title">Package details</string>
+    <string name="package_name">Package name</string>
+    <string name="package_version">Package version</string>
+    <string name="package_version_text"><xliff:g id="version_num">%1$s</xliff:g></string>
 </resources>
