Settings: Improve IME space feature [2/2]

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -464,10 +464,10 @@
     <!-- Navigation bar hint -->
     <string name="show_navbar_gesture_bar_title">Gesture indicator</string>
     <string name="show_navbar_gesture_bar_summary">Show gesture indicator at the bottom of the screen</string>
- 
-    <!-- Narrow gestural navigation bar -->
-    <string name="gestural_navbar_narrow_title">Remove space under keyboard</string>
-    <string name="gestural_navbar_narrow_summary">Make the navigation bar under the keyboard narrow</string>
+
+    <!-- Navigation bar IME space -->
+    <string name="navigation_bar_ime_space_title">Space under the keyboard</string>
+    <string name="navigation_bar_ime_space_value_narrow">Narrow</string>
 
     <!-- Battery stats reset -->
     <string name="battery_stats_reset">Clear usage data?</string>
