Settings: Don't translate battery_stats_clear string
Change-Id: I6511959e5a80499f682a0e191d046726c74145e2

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -461,7 +461,7 @@
     <!-- Battery stats reset -->
     <string name="battery_stats_reset">Clear usage data?</string>
     <string name="battery_stats_message">Battery usage data will be lost\n(This has no effect on the pixel stats)</string>
-    <string name="battery_stats_clear">@string/proxy_clear_text</string>
+    <string name="battery_stats_clear" translatable="false">@string/proxy_clear_text</string>
 
     <!-- Display : Rotation -->
     <string name="display_rotation_title">Rotation settings</string>
