Settings: Fix default value for IME space

--- a/res/xml/gesture_navigation_settings.xml
+++ b/res/xml/gesture_navigation_settings.xml
@@ -49,7 +49,8 @@
             android:key="navigation_bar_ime_space"
             android:title="@string/navigation_bar_ime_space_title"
             android:entries="@array/navigation_bar_ime_space_entries"
-            android:entryValues="@array/navigation_bar_ime_space_values" />
+            android:entryValues="@array/navigation_bar_ime_space_values"
+            android:defaultValue="0" />
 
         <com.evolution.settings.preference.SystemSettingSwitchPreference
             android:key="navigation_bar_hint"
