Settings: Add preference for toggling the wallpaper zooming animation
For some reason Google decided that permanently zooming the wallpaper by 10%
and ruining its' quality in order to show a "zoom out depth animation" was a
good design choice.
Make this user configurable in order to get our pixels back.

With toggle at it's default AOSP value:
https://i.imgur.com/3aGNNij.png

With toggle at off (you can actually see the full image as it's supposed to be):
https://i.imgur.com/GtAiqsN.png

Change-Id: I3dc58c0eecf00033090b9f5e8df92606962fdea8

--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -501,4 +501,9 @@
     <!-- Screen off FOD -->
     <string name="screen_off_fod_title">Screen off FOD</string>
     <string name="screen_off_fod_summary">Keep FOD enabled when the screen is off</string>
+
+    <!-- Display Settings: Title of the setting which toggles wallpaper zooming effects on interraction -->
+    <string name="wallpaper_zoom_effect_title">Wallpaper zoom effect</string>
+    <!-- Display Settings: Subtitle of the setting which toggles wallpaper zooming effects on interraction -->
+    <string name="wallpaper_zoom_effect_summary">Zoom the wallpaper in order to show zoom-out depth animation. Wallpapers may suffer quality decrease</string>
 </resources>
