--- a/res/xml/screen_lock_settings.xml
+++ b/res/xml/screen_lock_settings.xml
@@ -35,12 +35,6 @@
         android:key="visibledots"
         android:title="@string/lockpattern_settings_enable_dots_title"/>
 
-    <!-- available in pin -->
-    <SwitchPreference
-        android:key="lockscreen_scramble_pin_layout"
-        android:title="@string/unlock_scramble_pin_layout_title"
-        android:summary="@string/unlock_scramble_pin_layout_summary" />
-
     <!-- available in pin/password -->
     <SwitchPreference
         android:key="lockscreen_quick_unlock_control"
@@ -59,5 +53,18 @@
     <SwitchPreference
         android:key="power_button_instantly_locks"
         android:title="@string/lockpattern_settings_enable_power_button_instantly_locks" />
+
+    <!-- Lineage additions, available in pin/pattern/password/slide -->
+    <SwitchPreference
+        android:key="lockscreen_scramble_pin_layout"
+        android:title="@string/unlock_scramble_pin_layout_title"
+        android:summary="@string/unlock_scramble_pin_layout_summary" />
+
+    <!-- Fingerprint wake-and-unlock toggle -->
+    <SwitchPreference
+        android:key="fingerprint_wake_unlock"
+        android:title="@string/fingerprint_wake_unlock_title"
+        android:summaryOn="@string/fingerprint_wake_unlock_touch"
+        android:summaryOff="@string/fingerprint_wake_unlock_press" />
 
 </PreferenceScreen>
