--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -524,4 +524,7 @@
     <string name="smart_charging_reset_stats_title">Reset battery statistics</string>
     <string name="smart_charging_reset_stats_summary">Reset battery statistics after reaching user defined charging level</string>
     <string name="smart_charging_footer">Smart Charging allows you to set maximum charging level to extend the lifespan of your battery</string>
+
+    <!-- Summary for list to control apps that ignore battery saving restrictions -->
+    <string name="high_power_apps_summary" translatable="false">Per-app battery optimization</string>
 </resources>
