--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -83,6 +83,13 @@
         android:defaultValue="false" />
 
     <Preference
+        android:key="high_power_apps"
+        android:title="@string/high_power_apps"
+        android:summary="@string/high_power_apps_summary">
+        <intent android:action="android.settings.IGNORE_BATTERY_OPTIMIZATION_SETTINGS" />
+    </Preference>
+
+    <Preference
         android:key="battery_charge_sound"
         android:title="@string/notification_battery_charge_level_title"
         android:summary="@string/notification_battery_charge_level_summary"
