--- a/res/values/evolution_strings.xml
+++ b/res/values/evolution_strings.xml
@@ -290,6 +290,8 @@
     <string name="wifi_timeout_summary1">Wi-Fi will turn off after <xliff:g id="timeout_description">%1$s</xliff:g> if no network connected</string>
     <string name="wifi_timeout_summary2">Disabled</string>
     <string name="custom_timeout_summary_never">Never</string>
+    <string name="custom_timeout_summary_5secs">5 seconds</string>
+    <string name="custom_timeout_summary_10secs">10 seconds</string>
     <string name="custom_timeout_summary_15secs">15 seconds</string>
     <string name="custom_timeout_summary_30secs">30 seconds</string>
     <string name="custom_timeout_summary_1min">1 minute</string>
